fix background when avatar wrap

--- a/railcard.css
+++ b/railcard.css
@@ -12,7 +12,7 @@
     margin-top: 2%;
     margin-bottom: 100px;
     width: 100%;
-    height: 180px;
+    padding: 20px 0px;
     flex-wrap: wrap;
 }
 #railcard #railcard_headbar .imgdiv {
